--- a/test/test.html
+++ b/test/test.html
@@ -15,6 +15,8 @@
     <script class="mocha-init">
       mocha.setup('bdd');
       mocha.checkLeaks();
+      // statement to test with chai variable
+      const expect = chai.expect;
     </script>
     <script src="../utils.js"></script>
     <script src="../autocomplete.js"></script>
